--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -44,9 +44,11 @@ The schedule for the different curricula are listed here:
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
       <tr>
         <td>Afternoon</td>
+	<td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td>
+      </tr>
+      <tr><td> </td>
         <td>
           {% if site.flavor == "r" %}
           <a href="https://datacarpentry.org/R-ecology-lesson/">Introduction to R</a>
@@ -56,7 +58,6 @@ The schedule for the different curricula are listed here:
           {% include warning-flavor.html %}
           {% endif %}
       </td></tr>
-      <tr> <td>Evening</td> <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
@@ -65,23 +66,27 @@ The schedule for the different curricula are listed here:
       <tr> <td>Morning</td>
         <td>
           {% if site.flavor == "r" %}
-          <a href="https://datacarpentry.org/R-ecology-lesson/">Continuation of R: Data analysis and Visualization</a>
+          <a href="https://datacarpentry.org/R-ecology-lesson/">Introduction to R, cont.</a>
           {% elsif site.flavor == "python" %}
-          <a href="https://datacarpentry.org/python-ecology-lesson/">Continuation of Python: Data analysis and Visualization</a>
+          <a href="https://datacarpentry.org/python-ecology-lesson/">Continuation of Python: Data Analysis and Visualization</a>
           {% else %}
           {% include warning-flavor.html %}
           {% endif %}
         </td>
       </tr>
-      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
-      <tr>
-	<td>Evening</td>
-	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
-      </tr>
-      <tr>
-	<td> </td>
-	<td> END </td>
-      </tr>
+      <tr> 
+	<td>Afternoon</td>
+	<td>
+          {% if site.flavor == "r" %}
+          <a href="https://datacarpentry.org/R-ecology-lesson/">Introduction to R, cont.</a>
+          {% elsif site.flavor == "python" %}
+          <a href="https://datacarpentry.org/python-ecology-lesson/">Continuation of Python: Data Analysis and Visualization</a>
+          {% else %}
+          {% include warning-flavor.html %}
+          {% endif %}
+        </td>
+     </tr>
+	<tr><td> </td><td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td></tr>
     </table>
   </div>
 </div>
