--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -64,7 +64,7 @@ The schedule for the different curricula are listed here:
       <tr> <td>Morning</td>
         <td>
           {% if site.flavor == "r" %}
-          <a href="https://datacarpentry.org/R-ecology-lesson/">Introduction to R, cont.</a>
+          <a href="https://datacarpentry.org/R-ecology-lesson/">Introduction to R</a>
           {% elsif site.flavor == "python" %}
           <a href="https://datacarpentry.org/python-ecology-lesson/">Continuation of Python: Data Analysis and Visualization</a>
           {% else %}
@@ -76,7 +76,7 @@ The schedule for the different curricula are listed here:
 	<td>Afternoon</td>
 	<td>
           {% if site.flavor == "r" %}
-          <a href="https://datacarpentry.org/R-ecology-lesson/">Introduction to R, cont.</a>
+          <a href="https://datacarpentry.org/R-ecology-lesson/">Introduction to R</a>
           {% elsif site.flavor == "python" %}
           <a href="https://datacarpentry.org/python-ecology-lesson/">Continuation of Python: Data Analysis and Visualization</a>
           {% else %}
