--- a/_includes/dc/syllabus.html
+++ b/_includes/dc/syllabus.html
@@ -31,8 +31,6 @@ The syllabus for the different curricula are listed here:
       <li><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/05-save-export/">Exporting Data</a></li>
       <li><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/06-resources/">Other Resources</a></li>    </ul>
   </div>
-</div>
-<div class="row">
   {% if site.flavor == "r" %}
   <div class="col-md-6">
     <h3 id="syllabus-ecology-r">Introduction to R</h3>
@@ -65,6 +63,9 @@ The syllabus for the different curricula are listed here:
   {% else %}
   {% include warning-flavor.html %}
   {% endif %}
+</div>
+
+{% comment %}
   <div class="col-md-6">
     <h3 id="syllabus-git">Version Control with Git</h3>
     <ul>
@@ -80,6 +81,7 @@ The syllabus for the different curricula are listed here:
       <li><a href="http://swcarpentry.github.io/git-novice/14-supplemental-rstudio/index.html">Using Git with RStudio</a></li>
     </ul>
   </div>
+{% endcomment %}
   {% comment %}
   <div class="col-md-6">
     <h3 id="syllabus-ecology-sql">Data Management with SQL</h3>
